Sat Mar 12 13:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client_Adapter_Impl.{h,cpp}:
        * tao/ImR_Client/ImR_Client.{h,cpp}:
          Renamed ImR_Client_Adapter_Impl to ImR_Client, this file will be
          included by our users and this name makes more sense

        * tao/Makefile.am:
          Updated

        * orbsvcs/tests/ImplRepo/scale/server_i.cpp:
        * orbsvcs/tests/ImplRepo/nestea_server_i.cpp:
        * orbsvcs/tests/ImplRepo/airplane_server_i.cpp:
          Updated for change above

Fri Mar 11 18:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Direct_Collocation_Upcall_Wrapper.cpp:
          Added missing includes

        * TAO_IDL/be/be_visitor_operation/amh_ss.cpp:
          Generate static_cast in one line

Fri Mar 11 12:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/*.pidl:
          Added -SS to the regeneration instructions for the pidl files
          that have an empty S.h file

Fri Mar 11 12:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/PSS/PSDL_Scope.cpp:
        * orbsvcs/PSS/PSDL_Node.cpp:
        * examples/Advanced/ch_12/icp.cpp:
        * examples/Advanced/ch_21/icp.cpp:
        * examples/Advanced/ch_18/icp.cpp:
        * examples/Advanced/ch_8_and_10/icp.cpp:
        * docs/tutorials/Quoter/Simple/ImprovedServer/Stock_Factory_i.h:
        * docs/tutorials/Quoter/Simple/ImprovedServer/Stock_i.h:
          Changed _MSC_VER checks

Fri Mar 11 11:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/ImplRepo/nestea_server_i.cpp:
        * orbsvcs/tests/ImplRepo/airplane_server_i.cpp:
          Added include of ImR_Client_Adapter_Impl to force the link of the
          ImR_Client in a static build

        * orbsvcs/tests/ImplRepo/ImplRepo.mpc:
          Added imr_client as base project of the servers
